# python-package-template

./: README.md  azure-pipelines.yml  pyproject.toml
tests/: test_example.py
